--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: pleroma_db
     restart: always
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "pleroma"]
+      test: [ "CMD", "pg_isready", "-U", "pleroma" ]
     environment:
       POSTGRES_USER: pleroma
       POSTGRES_PASSWORD: ChangeMe!
@@ -21,7 +21,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "wget -q --spider --proxy=off localhost:4000 || exit 1",
+          "wget -q --spider --proxy=off localhost:4000 || exit 1"
         ]
     restart: always
     ports:
@@ -39,10 +39,10 @@ services:
       - ./static:/var/lib/pleroma/static
       - ./config.exs:/etc/pleroma/config.exs:ro
     environment:
-      DOMAIN: example.com
-      INSTANCE_NAME: Pleroma
-      ADMIN_EMAIL: admin@example.com
-      NOTIFY_EMAIL: notify@example.com
+      DOMAIN: local.tavern-keeper.com
+      INSTANCE_NAME: Centinaro
+      ADMIN_EMAIL: admin@social.centinaro.net
+      NOTIFY_EMAIL: notify@centinaro.net
       DB_USER: pleroma
       DB_PASS: ChangeMe!
       DB_NAME: pleroma
