--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -41,12 +41,15 @@ jobs:
           DB_USER: ${{ secrets.DB_USER }}
           DB_NAME: ${{ secrets.DB_NAME }}
           DOMAIN: ${{ secrets.DOMAIN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           MEDIA_DOMAIN: ${{ secrets.MEDIA_DOMAIN }}
           PLEROMA_VER: v2.5.1
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG  --build-arg PLEROMA_VER=$PLEROMA_VER \
           --build-arg DB_PASS=$DB_PASS --build-arg DB_HOST=$DB_HOST --build-arg DB_USER=$DB_USER --build-arg DB_NAME=DB_NAME \
+          --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
           --build-arg UID=1000 --build-arg GID=1000 \
           .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
